[package]
name = "near-indexer-for-wallet"
version = "1.1.1"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[profile.dev]
debug = false

[dependencies]
actix = "0.9"
bigdecimal = "0.1.0"
clap = "3.0.0-beta.1"
diesel = { version = "1.4.5", features = ["postgres", "numeric", "serde_json"] }
# Using hacky diesel-derive-enum https://github.com/adwhit/diesel-derive-enum/issues/52
diesel-derive-enum = { git = "https://github.com/khorolets/diesel-derive-enum.git", branch = "lookup-hack", features = ["postgres"] }
dotenv = "0.15.0"
futures = "0.3.5"
hex = "0.4"
itertools = "0.9.0"
openssl-probe = { version = "0.1.2" }
r2d2 = "0.8.8"
serde_json = "1.0.55"
tokio = { version = "0.2", features = ["sync", "time"] }
tokio-diesel = "0.3.0"
tracing = "0.1.13"
tracing-subscriber = "0.2.4"

# Using these dependencies to introduce dump-state command that will replace data in DB with AccessKeys from a current state
# this can be refactored once nearcore is divided to components and `state-viewer` of nearcore is made as lib
near-indexer = { git = "https://github.com/nearprotocol/nearcore", rev="0439f5254f093c5b96ad2dd2eb92a1b93dc60e8e" }
near-store = { git = "https://github.com/nearprotocol/nearcore", rev="0439f5254f093c5b96ad2dd2eb92a1b93dc60e8e" }
near-chain = { git = "https://github.com/nearprotocol/nearcore", rev="0439f5254f093c5b96ad2dd2eb92a1b93dc60e8e" }
neard = { git = "https://github.com/nearprotocol/nearcore", rev="0439f5254f093c5b96ad2dd2eb92a1b93dc60e8e" }
near-chain-configs = { git = "https://github.com/nearprotocol/nearcore", rev="0439f5254f093c5b96ad2dd2eb92a1b93dc60e8e" }
near-crypto = { git = "https://github.com/nearprotocol/nearcore", rev="0439f5254f093c5b96ad2dd2eb92a1b93dc60e8e" }
