[package]
name = "near-indexer-for-wallet"
version = "1.3.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[dependencies]
actix = "0.11.0-beta.1"
bigdecimal = "0.1.0"
clap = "3.0.0-beta.1"
diesel = { version = "1.4.5", features = ["postgres", "numeric", "serde_json"] }
# Using hacky diesel-derive-enum https://github.com/adwhit/diesel-derive-enum/issues/52
diesel-derive-enum = { git = "https://github.com/khorolets/diesel-derive-enum.git", branch = "lookup-hack", features = ["postgres"] }
dotenv = "0.15.0"
futures = "0.3.5"
hex = "0.4"
itertools = "0.9.0"
openssl-probe = { version = "0.1.2" }
r2d2 = "0.8.8"
serde_json = "1.0.55"
tokio = { version = "1.1", features = ["sync", "time"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"

actix-diesel = { git = "https://github.com/frol/actix-diesel", branch="actix-0.11-beta" }
# Using these dependencies to introduce dump-state command that will replace data in DB with AccessKeys from a current state
# this can be refactored once nearcore is divided to components and `state-viewer` of nearcore is made as lib
near-indexer = { git = "https://github.com/nearprotocol/nearcore", rev="f31cfb954bdd81885bc789bfa406035717db5ab5" }
near-store = { git = "https://github.com/nearprotocol/nearcore", rev="f31cfb954bdd81885bc789bfa406035717db5ab5" }
near-chain = { git = "https://github.com/nearprotocol/nearcore", rev="f31cfb954bdd81885bc789bfa406035717db5ab5" }
neard = { git = "https://github.com/nearprotocol/nearcore", rev="f31cfb954bdd81885bc789bfa406035717db5ab5" }
near-chain-configs = { git = "https://github.com/nearprotocol/nearcore", rev="f31cfb954bdd81885bc789bfa406035717db5ab5" }
near-crypto = { git = "https://github.com/nearprotocol/nearcore", rev="f31cfb954bdd81885bc789bfa406035717db5ab5" }

[dev-dependencies]
# Pin dependency to avoid compilation errors
actix-rt = "=2.0.0-beta.2"
